# dynamicdatagenerator

./: .gitignore  README.md  pyproject.toml
configs/: privacy.yaml  relationships.yaml  tables.yaml
configs/queries/: etl_queries.sql  reporting_queries.sql
samples/: generate_samples.py
src/bank_synth/: __init__.py  cli.py  models.py
src/bank_synth/discovery/: __init__.py  auto_discovery.py  query_parser.py  relationship_inferrer.py
src/bank_synth/generator/: __init__.py  generator.py
src/bank_synth/metadata/: __init__.py  hive.py  oracle.py  resolver.py
src/bank_synth/output/: __init__.py  hive_orc.py  hive_parquet.py  writer.py
src/bank_synth/spark/: __init__.py  generator.py  session.py  trainer.py
src/bank_synth/trainer/: __init__.py  trainer.py
src/bank_synth/utils/: __init__.py  quality.py
tests/: __init__.py  test_discovery.py  test_generator.py  test_models.py  test_output.py  test_spark.py
