[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bank-synth"
version = "0.1.0"
description = "Model-trained synthetic data generator for banking relational models (Oracle + Hive)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "DDG Team", email = "ddg@example.com"}
]
keywords = ["synthetic-data", "banking", "oracle", "hive", "sdv", "test-data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "faker>=22.0",
    "networkx>=3.0",
    "sdv>=1.10",
    "oracledb>=2.0",
    "pyspark>=3.5",
    "tqdm>=4.65",
    "jinja2>=3.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
bank_synth = "bank_synth.cli:cli"

[project.urls]
"Homepage" = "https://github.com/example/bank-synth"
"Bug Tracker" = "https://github.com/example/bank-synth/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
